# mysql-migration-monitor

./: .gitignore  LICENSE  MIGRATION_GUIDE.md  README.md  TEXTUAL_UPGRADE.md  app.py  cdc_monitor.py  config.ini.example  config.py  debug_monitor.py  main.py  pyproject.toml  run_fixed.py  start_monitor.sh  start_mysql_monitor.sh  test_connection.py  test_mysql_monitor.py
.cursor/rules/: rules.mdc
data_access/: __init__.py  mysql_repository.py  table_service.py
services/: __init__.py  monitor_service.py  stats_service.py
ui/: __init__.py  app.py  theme.py  widgets.py
