[project]
name = "cdc-monitor"
version = "1.0.0"
description = "CDC数据一致性监控工具"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "rich>=13.0.0",
    "textual>=0.45.0",
    "psycopg2-binary>=2.9.0",
    "PyMySQL>=1.0.0",
    "configparser>=5.0.0",
    "asyncpg>=0.30.0",
    "aiomysql>=0.2.0",
]

[project.scripts]
cdc-monitor = "cdc_monitor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
] 
